Enhance Tutorials UI and Fix SideDrawer Overlap Bug
Added icons to the tutorials section on landingPage.html for improved UI. Fixed a bug where the SideDrawer overlapped with the Workspace by ensuring it closes automatically before Workspace renders.

--- a/client/public/views/styles/homepage.css
+++ b/client/public/views/styles/homepage.css
@@ -133,10 +133,19 @@ img.arrow.dark {
   /* text-align: center; */
   transition: transform 250ms ease;
   width: 100%;
+  display: flex;
+}
+
+.instruction i {
+  margin-right: 10px; 
+}
+
+.instruction-title {
+  font-size: 1.5rem;
 }
 
 .instruction.active {
-  font-size: x-large;
+  /* font-size: x-large; */
   display: block;
   /* align-items: flex-start;
   justify-content: flex-start; */
@@ -636,4 +645,8 @@ img.arrow.dark {
 #login:hover::after,
 #signup:hover::after {
   width: 90%;
+}
+
+#tutorialText, #meetTeamText {
+  font-family: 'Baloo Bhaijaan 2', sans-serif;
 }
